--- a/GTAVTutorials/ENG/about.html
+++ b/GTAVTutorials/ENG/about.html
@@ -15,7 +15,7 @@ margin: 2px;
 VLADOS776<br>
 <ul>
 <li><b>Steam ID</b>: <a href="https://steamcommunity.com/id/vanushka2004" target="_blank">vanushka2004</a></li>
-<li><b>Twitter</b>: <a href="https://twitter.com/VLADOS776" target="_blank">@VLADOS776</a></li>
+<li><b>Twitter</b>: <a href="https://twitter.com/VLADOS776">@VLADOS776</a></li>
 <li><b>Email</b>: kurtukovvlad@gmail.com</li></ul>
 If you find bugs, or you have a suggestion, e-mail me.<br>
 Don't forget to rate the app in the Market ^_^<br>
