Redirect to ENG main.html

--- a/GTAVTutorials/RUS/main.html
+++ b/GTAVTutorials/RUS/main.html
@@ -26,5 +26,8 @@ a {
 <body>
 <div style="background: url('../images/Main_menu/about.png') left; background-size: cover;"><a href="about.html" >О программе</a></div>
 <div style="background: url('../images/Main_menu/apps.png') left; background-size: cover;"><a href="http://vlados776.ucoz.ru/Android/RUS/apps.html" >Туториалы для других игр</a></div>
+<script>
+location = "../ENG/main.html";
+</script>
 </body>
 </html>
