--- a/GTAVTutorials/ENG/main.html
+++ b/GTAVTutorials/ENG/main.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-<title>Main Page</title>
+<title>GTA V Tutorials</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
 </head>
 <style>
 div {
