--- a/GTAVTutorials/ENG/main.html
+++ b/GTAVTutorials/ENG/main.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
+<link rel="apple-touch-icon" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon60.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon76.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon120.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon152.png">
 </head>
 <style>
 div {
