--- a/GTAVTutorials/map/map.html
+++ b/GTAVTutorials/map/map.html
@@ -4,7 +4,12 @@
 	<title>Map</title>
     <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-capable" content="yes" />  
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<link rel="apple-touch-icon" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon60.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon76.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon120.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon152.png">
 	<link rel="stylesheet" href="leaflet.css" />
     <style>
         body
