Apple app & delete
Добавлен скрипт main.js в main.html.
Удалены лишние картинки и html файлы

--- a/GTAVTutorials/ENG/main.html
+++ b/GTAVTutorials/ENG/main.html
@@ -9,6 +9,7 @@
 <link rel="apple-touch-icon" sizes="76x76" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon76.png">
 <link rel="apple-touch-icon" sizes="120x120" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon120.png">
 <link rel="apple-touch-icon" sizes="152x152" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon152.png">
+<script src="../scripts/main.js"></script>
 </head>
 <style>
 div {
