--- a/GTAVTutorials/ENG/main.html
+++ b/GTAVTutorials/ENG/main.html
@@ -3,13 +3,17 @@
 <title>GTA V Tutorials</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<script src="../scripts/jquery.min.js"></script>
+<script src="../scripts/main.js"></script>
+
+<!-- Apple App -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <link rel="apple-touch-icon" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon60.png">
 <link rel="apple-touch-icon" sizes="76x76" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon76.png">
 <link rel="apple-touch-icon" sizes="120x120" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon120.png">
 <link rel="apple-touch-icon" sizes="152x152" href="https://vlados776.github.io/GTAVTutorials/images/icons/icon152.png">
-<script src="../scripts/main.js"></script>
+
 </head>
 <style>
 div {
