--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
       <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Apps</h3>
-
-<a href="GTAVTutorials\map\map.html">GTA V Map (Beta)</a>
-<a href="PocketMortys\ENG\mortyDeck.html">Pocket Mortys (Morty Deck)</a>
-<a href="PocketMortys\ENG\Items.html">Pocket Mortys (Items List)</a>
+<ul>
+<li><a href="GTAVTutorials\map\map.html">GTA V Map (Beta)</a></li>
+<li><a href="PocketMortys/ENG/mortyDeck.html">Pocket Mortys (Morty Deck)</a></li>
+<li><a href="PocketMortys/ENG/Items.html">Pocket Mortys (Items List)</a></li>
+</ul>
 <!-- <a href="GTAVTutorials\ENG\main.html">GTA V Tutorials</a> -->
       </section>
     </div>
