Добавлены квесты в главное меню

--- a/PocketMortys/ENG/main.html
+++ b/PocketMortys/ENG/main.html
@@ -38,6 +38,7 @@ a {
 <body>
 <div style="background: url('../images/Main_menu/mortyDeck.png') left; background-size: cover;"><a href="mortyDeck.html">Morty Deck</a></div>
 <div style="background: url('../images/Main_menu/items.png') left; background-size: cover;"><a href="Items.html">Items List</a></div>
+<div style="background: url('../images/Main_menu/quest.png') left; background-size: cover;"><a href="quest.html">Quests</a></div>
 <div style="background: url('../images/Main_menu/about.png') left; background-size: cover;"><a href="about.html" >About</a></div>
 <div style="background: url('../images/Main_menu/apps.png') left; background-size: cover;"><a href="http://vlados776.ucoz.ru/Android/ENG/apps.html" >Other apps</a></div>
 </body>
