--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <li><a href="GTAVTutorials\map\map.html">GTA V Map (Beta)</a></li>
 <li><a href="PocketMortys/ENG/mortyDeck.html">Pocket Mortys (Morty Deck)</a></li>
 <li><a href="PocketMortys/ENG/Items.html">Pocket Mortys (Items List)</a></li>
+<li><a href="CSGO/ENG/testWeapon.html">CS:GO Weapon (beta)</a></li>
 </ul>
 <!-- <a href="GTAVTutorials\ENG\main.html">GTA V Tutorials</a> -->
       </section>
