--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <li><a href="PocketMortys/ENG/mortyDeck.html">Pocket Mortys (Morty Deck)</a></li>
 <li><a href="PocketMortys/ENG/Items.html">Pocket Mortys (Items List)</a></li>
 <li><a href="CSGO/ENG/testWeapon.html">CS:GO Weapon (beta)</a></li>
+<li><a href="CSGO/OpenCases/www/RUS/cases.html">CS:GO Open Cases</a></li>
 </ul>
 <!-- <a href="GTAVTutorials\ENG\main.html">GTA V Tutorials</a> -->
       </section>
