--- a/CSGO/OpenCases/www/RUS/cases.html
+++ b/CSGO/OpenCases/www/RUS/cases.html
@@ -49,6 +49,7 @@ body {
     top: 0;
     left: 0;
 	overflow: auto;
+	overflow-x: hidden;
 	background: #105868;
 	height: 100%;
 }
@@ -105,7 +106,7 @@ body {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: local("Roboto"), local("Roboto-Regular"), url("https://fonts.gstatic.com/s/roboto/v15/CWB0XYA8bzo0kSThX0UTuA.woff2") format("woff2");
+  src: local("Roboto"), local("Roboto-Regular"), url("../font/RobotoRegular.ttf") format("ttf");
   unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /*RARITY*/
@@ -197,9 +198,9 @@ div.weapon > .weaponInfo {
 	.scrollerContainer {
 		margin: 45px 0 10px;
 	}
-	#caruselOver {
+	/*#caruselOver {
 		max-width: calc(100% - 2px);
-	}
+	}*/
 	#aCanvas {
 		max-width: calc(100% - 1px);
 	}
@@ -261,6 +262,10 @@ span.winName {
     width: 100%;
     height: 20px;
     margin-top: -20px;
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
     transform: rotate(180deg);
     /*position: absolute;*/
     background-position: 10px;
@@ -273,8 +278,8 @@ span.winName {
 <div class="closeCase"></div>
 
 <div class="scrollerContainer">
-	<div id="caruselLine"></div>
-	<div id="caruselOver"></div>
+	
+	<div id="caruselOver"><div id="caruselLine"></div></div>
 	<div id="aCanvas">
 		<div class="casesCarusel">
 		</div>
@@ -432,7 +437,7 @@ $(".openCase").on("click", function() {
 			$(".zabor-bot").css("display", "block");
 			caseOpening = false;
 			$(".openCase").attr("disabled", null);
-			$(".weapons").scrollTop(150);
+			$(".weapons").scrollTop(185);
 		},
 		always: function() {
 			//$(".openCase").attr("disabled", null);
