--- a/CSGO/OpenCases/www/RUS/cases.html
+++ b/CSGO/OpenCases/www/RUS/cases.html
@@ -1,491 +1,15 @@
 ﻿<html>
 <head>
-<title>Открытие кейсов</title>
+<title>Список кейсов</title>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
-<style>
-body {
-    background: url(../images/background.png) fixed no-repeat;
-    background-size: cover;
-}
-.cases {
-	text-align: center;
-	background: url(../images/bg2.png) fixed;
-}
-.case {
-    display: inline-block;
-    margin: 5px;
-    width: 200px;
-    text-align: center;
-    height: 193px;
-    box-shadow: 0px 0px 7px #000;
-}
-.name {
-    display: block;
-    text-align: left;
-    background: linear-gradient(to right, #828F9E, #474C52);
-    color: #fff;
-    height: 38px;
-    padding: 0 10px;
-    padding-top: 2px;
-	text-shadow: 1px 1px 2px rgba(0,0,0,0.84);
-}
-.case img {
-    width: 190px;
-    height: 138px;
-    background: linear-gradient(to top, #A8A8A8, #474747);
-    padding: 5px;
-    padding-bottom: 10px;
-	box-shadow: 0 -2px 3px rgba(50, 50, 50, 0.85) inset;
-}
 
-/*WEAPONS*/
-.weapons {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-	overflow: auto;
-	overflow-x: hidden;
-	background: #105868;
-	height: 100%;
-}
-.weaponsList {
-    position: relative;
-    display: block;
-    list-style: none;
-    background: #131313;
-    margin: 0;
-    padding: 18px;
-}
-.weapon {
-    display: inline-block;
-    background: url("../images/Cases/itembg.png") #111;
-    color: #fff;
-    height: 124px;
-    width: 123px;
-    margin: 5px 4px;
-}
-.weapon img {
-    padding: 0 1px;
-    width: 112px;
-    margin: -8px 0 -10px 5px;
-}
-.weaponInfo {
-    margin: -5px 0;
-	text-align: left;
-}
-.type {
-    background-size: cover;
-    font-size: 11px;
-    width: 125px;
-    display: inline-block;
-    font-family: "Roboto";
-    line-height: 14px;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.84);
-    margin-top: 1px;
-    padding: 3px 5px;
-}
-.closeCase {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    font-size: 11px;
-    line-height: 15px;
-    color: #999;
-    cursor: pointer;
-    z-index: 1;
-    background: url("../images/Cases/close.png") no-repeat center;
-    width: 30px;
-    height: 30px;
-}
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Roboto"), local("Roboto-Regular"), url("../font/RobotoRegular.ttf") format("ttf");
-  unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-/*RARITY*/
-.milspec {
-    background: linear-gradient(to right,#3747A7,#262E5E);
-}
-.restricted {
-    background: linear-gradient(to right,#6533A6,#422660);
-}
-.classified{
-    background: linear-gradient(to right,#A41EA0,#5E1D57);
-}
-.covert {
-    background: linear-gradient(to right,#BA3432,#662226);
-}
-.rare {
-    background: linear-gradient(to right,#DAB515,#826E1B);
-}
-
-.industrialS, .industrial {
-    background: linear-gradient(to right,#4A78AD,#324455);
-}
-/*RARITY_END*/
-
-div.weapon > .weaponInfo {
-    margin: 0;
-}
-
-/*CARUSEL*/
-.scrollerContainer {
-    margin: 10px 0;
-}
-#caruselLine {
-    position: absolute;
-    width: 2px;
-    height: 137px;
-    background: rgb(189, 110, 32);
-    /*top: 11px;*/
-    left: 50%;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 7px rgba(0, 0, 0, 1);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 7px rgba(0, 0, 0, 1);
-    z-index: 2;
-}
-#caruselOver {
-    position: absolute;
-    width: 384px;
-    height: 137px;
-    left: calc(50% - 193px);
-    border: 1px solid #242424;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 7px rgba(0, 0, 0, 1);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 7px rgba(0, 0, 0, 1);
-    z-index: 2;
-}
-#aCanvas {
-    width: 383px;
-    height: 136px;
-    margin: 0px auto;
-    background: #090c0f;
-    overflow: hidden;
-    padding-top: 2px;
-    padding-left: 1px;
-    z-index: 2;
-}
-.casesCarusel {
-    width: 15000px;
-    text-align: left;
-}
-
-/*Если разрешение экрана меньше 495px*/
-@media (max-width:495px) {
-	.case {
-		margin: 7px 5px;
-		width: 125px;
-		height: 138px;
-	}
-	.case img {
-		width: 115px;
-		height: auto;
-		padding: 5px;
-		padding-bottom: 10px;
-	}
-	.name {
-		height: 38px;
-		padding: 5px 10px;
-		position: absolute;
-		width: 105px;
-	}
-	/*Carusel*/
-	.scrollerContainer {
-		margin: 45px 0 10px;
-	}
-	/*#caruselOver {
-		max-width: calc(100% - 2px);
-	}*/
-	#aCanvas {
-		max-width: calc(100% - 1px);
-	}
-	
-}
-
-/*Если разрешение экрана меньше 401px*/
-@media (max-width:401px) {
-	#caruselOver {
-		left: 0px;
-	}
-}
-
-/*CARUSEL_END*/
-.openCase {
-    background: linear-gradient(to bottom, #00953b, #006910);
-    display: inline-block;
-    line-height: 35px;
-    color: #fff;
-    font-weight: bold;
-    border: 1px solid #02a543;
-    font-family: monospace;
-    padding: 0 20px;
-    margin: 25px 0 25px;
-}
-/*WEAPONS_END*/
-.win {
-    background: #003440;
-    padding-top: 25px;
-}
-.win > span {
-    color: #FFCD48;
-    display: block;
-}
-.win img {
-	max-width: 100%;
-}
-span.winName {
-    color: #fff;
-    font-weight: bold;
-    font-size: 20px;
-    text-shadow: 1px 1px #000;
-    font-family: sans-serif;
-    padding-top: 2px;
-}
-#youCanWin {
-    color: #fff;
-    font-size: 15px;
-    font-family: sans-serif;
-}
-.zabor {
-    background: url(../images/zabor.png) repeat-x;
-    width: 100%;
-    height: 20px;
-    position: absolute;
-}
-.zabor-bot {
-    background: url(../images/zabor.png) repeat-x;
-    width: 100%;
-    height: 20px;
-    margin-top: -20px;
-	-webkit-transform: rotate(180deg);
-	-moz-transform: rotate(180deg);
-	-ms-transform: rotate(180deg);
-	-o-transform: rotate(180deg);
-    transform: rotate(180deg);
-    /*position: absolute;*/
-    background-position: 10px;
-    display: none;
-}
-</style>
 <body>
 <div class="cases"></div>
-<div class="weapons" style="display:none;">
-<div class="closeCase"></div>
-
-<div class="scrollerContainer">
-	
-	<div id="caruselOver"><div id="caruselLine"></div></div>
-	<div id="aCanvas">
-		<div class="casesCarusel">
-		</div>
-	</div>
 </div>
-
-<div class="zabor"></div>
-<div class="win" style="display: none;">
-<span>Вы выиграли</span>
-
-<span class="winName"></span>
-<img src="" class="winImg">
-</div>
-<div class="zabor-bot"></div>
-
-<button class="openCase">Открыть кейс</button>
-
-<div id="youCanWin">Вы можете выиграть один из данных предметов </div>
-<ul class="weaponsList">
-</ul>
-</div>
-
-<script>
-	var caseId = 0;
-	var win;
-	var winNumber = 35;
-	var caseOpening = false;
-	var caseOpenAudio = new Audio();
-	caseOpenAudio.src = "../sound/open.wav";
-	caseOpenAudio.volume = 0.2;
-	
-	var caseCloseAudio = new Audio();
-	caseCloseAudio.src = "../sound/close.wav";
-	caseCloseAudio.volume = 0.2;
-
-	var caseBackAudio = new Audio();
-	caseBackAudio.src = "../sound/back.wav";
-	caseBackAudio.volume = 0.1;
-
-	var caseScrollAudio = new Audio();
-	caseScrollAudio.src = "../sound/scroll.wav";
-	//caseScrollAudio.loop = true;
-	caseScrollAudio.playbackRate = 1;
-	caseScrollAudio.volume = 0.2;
-	
-for(var i = 0; i < cases.length ; i++) {
-	var specialClass = (typeof cases[i].specialClass == "undefined") ? "" : cases[i].specialClass;
-	var curCase = "<div class='case' id="+i+"><img src='../images/Cases/cases/"+cases[i].img+"'><span class='name "+specialClass+"'>"+cases[i].name+"</span>";
-	$(".cases").append(curCase);
-}
-$(document).on("click", ".case", function(){
-	$(".weaponsList").html("");
-	window.scrollTo(0, 0);
-	$("body").css("overflow", "hidden");
-	caseId = this.id;
-	for(var i = 0; i < cases[caseId].weapons.length; i++) {
-		var weapon = cases[caseId].weapons[i];
-		var img = prefix + weapon.img + postfix;
-		
-		var type = weapon.type;
-		if(type.indexOf("|") != -1) {type = type.split("|")[1]}
-		
-		var name = weapon.skinName;
-		if(name.indexOf("|") != -1) {name = name.split("|")[1]}
-		var weaponInfo = "<img src='"+img+"'><div class='weaponInfo "+weapon.rarity+"'><span class='type'>"+type+"<br>"+name+"</span></div>";
-		$(".weaponsList").append("<li class='weapon'>"+weaponInfo+"</li>");
-	}
-	$(".weapons").css("display", "block");
-	fillCarusel(caseId);
-	$(".win").hide();
-	$(".zabor-bot").css("display", "none");
-	$(".openCase").text("Открыть кейс");
-});
-
-function fillCarusel(caseId) {
-	var a0 = cases[caseId].weapons.filter(function(weapon) { return weapon.rarity == 'industrial' }).mul(7).shuffle();
-	var a1 = cases[caseId].weapons.filter(function(weapon) { return weapon.rarity == 'milspec' }).mul(5).shuffle();
-	var a2 = cases[caseId].weapons.filter(function(weapon) { return weapon.rarity == 'restricted' }).mul(5).shuffle();
-	var a3 = cases[caseId].weapons.filter(function(weapon) { return weapon.rarity == 'classified' }).mul(4).shuffle();
-	var a4 = cases[caseId].weapons.filter(function(weapon) { return weapon.rarity == 'covert' }).mul(1).shuffle();
-	var a5 = cases[caseId].weapons.filter(function(weapon) { return weapon.rarity == 'rare' }).mul(1).shuffle();
-	
-	if ((Math.rand(0, 10) > 7) && (a5.length + a4.length+a2.length+a1.length != 0)) {a3 = [];}
-	if ((Math.rand(0, 10) > 5) && (a5.length + a3.length+a2.length+a1.length != 0)) {a4 = [];}
-	if ((Math.rand(0, 10) > 3) && (a4.length + a3.length+a2.length+a1.length != 0)) {a5 = [];}
-	
-	if (a0 == undefined) {
-		var arr = a1.concat(a2, a3, a4, a5).shuffle().shuffle().shuffle();
-	} else {
-		var arr = a0.concat(a1, a2, a3, a4, a5).shuffle().shuffle().shuffle();
-	}
-	var el = '';
-	if (arr.length <= winNumber) {
-		while (arr.length <= winNumber) {
-			arr = arr.concat(a1, a2, a3, a4).shuffle().shuffle();
-		}
-	}
-	arr.forEach(function(item, index) {
-		var img = prefix + item.img + postfix;
-		var type = item.type;
-		if(type.indexOf("|") != -1) {type = type.split("|")[1]}
-		
-		var name = item.skinName;
-		if(name.indexOf("|") != -1) {name = name.split("|")[1]}
-		el += '<div class="weapon">'+
-				'<img src="'+img+'" />'+
-				'<div class="weaponInfo '+item.rarity+'"><span class="type">'+type+'<br>'+name+'</span></div>'+
-				'</div>'
-		})
-	
-	win = arr[winNumber];
-	$(".casesCarusel").html(el);
-	$(".casesCarusel").css("margin-left", "0px");
-}
-
-$(".openCase").on("click", function() {
-	$(".weapons").scrollTop(0);
-	if (caseOpening || $(".openCase").text() == "Открываем кейс...") {return false};
-	//$(".openCase").attr("disabled", "disabled");
-	$(".win").slideUp("slow");
-	$(".zabor-bot").css("display", "none");
-	if($(".openCase").text() == "Попробовать еще раз") {backToZero()}
-	$(".openCase").text("Открываем кейс...");
-	$(".openCase").attr("disabled", "disabled");
-	//var a = 1431 + 16*24;
-	var a = 127*winNumber;
-	var l = 131;
-	var d = 0, s = 0;
-	$(".casesCarusel").animate({marginLeft: -1 * Math.rand(a-50, a+60) }, {
-		duration: 10000,
-		easing: 'easeOutCubic',
-		start: function(){
-			caseOpenAudio.play();
-			var type = win.type;
-			caseOpening = true;
-			if(type.indexOf("|") != -1) {type = type.split("|")[1]}
-			
-			var name = win.skinName;
-			if(name.indexOf("|") != -1) {name = name.split("|")[1]}
-			$(".winName").html(type + " | " + name);
-			$(".winImg").attr("src", prefix + win.img + postfixBig);
-			$(".openCase").attr("disabled", "disabled");
-		},
-		progress: function(e, t) {
-			progress_animate = Math.round(100 * t),
-            s = parseInt(parseInt($(".casesCarusel").css("marginLeft").replace(/[^0-9.]/g, "") - l / 2) / l),
-            s > d && (caseScrollAudio.currentTime = 0,
-            caseScrollAudio.play(),
-            d++)
-		},
-		complete: function(){
-			caseCloseAudio.play();
-			$(".openCase").text("Попробовать еще раз");
-			$(".win").slideDown("slow");
-			$(".zabor-bot").css("display", "block");
-			caseOpening = false;
-			$(".openCase").attr("disabled", null);
-			$(".weapons").scrollTop(185);
-		},
-		always: function() {
-			//$(".openCase").attr("disabled", null);
-			caseOpening = false;
-		}
-	})
-})
-
-function backToZero() {
-	var l = 131;
-	var s = 0, d = 0;
-	$(".casesCarusel").animate({marginLeft: 0}, {
-		duration: 1000,
-		easing: "easeOutQuad",
-		start: function() {
-			fillCarusel(caseId);
-			//caseBackAudio.play();
-		},
-		always: function() {
-			//$(".openCase").attr("disabled", null);
-			caseOpening = false;
-		}
-	})
-}
-
-$(".closeCase").on("click", function(){
-	$(".weapons").css("display", "none");
-	$(".openCase").text("Открыть кейс");
-	$(".win").hide();
-	$(".zabor-bot").css("display", "none");
-	$(".casesCarusel").stop(true, true);
-	$("body").css("overflow", "visible");
-	caseOpening = false;
-})
-
-Array.prototype.shuffle = function() {
-	var o = this;
-	for(var j, x, i = o.length; i; j = Math.floor(Math.random() * i), x = o[--i], o[i] = o[j], o[j] = x);
-	return o;
-}
-Array.prototype.mul = function(k) {
-	var res = []
-	for (var i = 0; i < k; ++i) res = res.concat(this.slice(0))
-	return res
-}
-Math.rand = function getRandomInt(min, max) {
-    return Math.floor(Math.random() * (max - min + 1)) + min;
-}
-</script>
+<script src="../scripts/main.js"></script>
 </body>
 </html>
