CS go Cases update + Jackpot

--- a/CSGO/OpenCases/www/RUS/open.html
+++ b/CSGO/OpenCases/www/RUS/open.html
@@ -2,9 +2,11 @@
 <head>
 <title>Открытие кейса</title>
 <script src="../scripts/cases2.js"></script>
+<script src="../scripts/quality.js"></script>
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/rarity.css">
 </head>
 <body>
 
@@ -24,6 +26,7 @@
 <span>Вы выиграли</span>
 
 <span class="winName"></span>
+<span class="winQuality"></span>
 <img src="" class="winImg">
 </div>
 <div class="zabor-bot"></div>
