--- a/CSGO/OpenCases/www/RUS/cases.html
+++ b/CSGO/OpenCases/www/RUS/cases.html
@@ -1,15 +1,11 @@
-﻿<html>
-<head>
+﻿<html><head>
 <title>Список кейсов</title>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
-</head>
-
-<body>
+<link rel="stylesheet" type="text/css" href="../css/rarity.css">
+</head><body>
 <div class="cases"></div>
-</div>
 <script src="../scripts/main.js"></script>
-</body>
-</html>
+</body></html>
