--- a/CSGO/OpenCases/www/RUS/cases.html
+++ b/CSGO/OpenCases/www/RUS/cases.html
@@ -5,7 +5,10 @@
 <script src="../scripts/jquery-ui.min.js"></script>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
-</head><body>
+</head><body style="padding-bottom: 45px;">
 <div class="cases"></div>
+<div class="navigat">
+<div class="navigate" id="navigate-cases">Кейсы</div><div class="navigate" id="navigate-jackpot">Рулетка</div>
+</div>
 <script src="../scripts/main.js"></script>
 </body></html>
